dataset1235/2025-2/610742602/users/1276526791/executions/677928262_775838323.log
== RUN (2025-08-28 01:44:32)
-- CODE: 
# b) Espero o resultado 10.0
# c) Código executado.
# d) O resultado obtido foi 10.0, conforme o esperado.

# f) Espero o resultado 4.0
n1 = 5
n2 = 4
n3 = 3
m = (n1 + n2 + n3) / 3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 01:49:11)
-- CODE: 
# b) Espero o resultado 10.0
# c) Código executado.
# d) O resultado obtido foi 10.0, conforme o esperado.

# f) Espero o resultado 4.0
# g) Código executado.
# h) O resultado obtido foi 4.0, conforme o esperado.
# i) 
n1 = 5
n2 = 4
n3 = 3
m = (n1 + n2 + n3) / 3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:48:10)
-- CODE: 
# b) Espero o resultado 10.0
# c) Código executado.
# d) O resultado obtido foi 10.0, conforme o esperado.

# f) Espero o resultado 4.0
# g) Código executado.
# h) O resultado obtido foi 4.0, conforme o esperado.
# i) 
m = (n1 + n2 + n3)/3
m = (5 + 4 + 3)/3
m = 12/3
m = 4
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    m = (n1 + n2 + n3)/3
         ^^
NameError: name 'n1' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    m = (n1 + n2 + n3)/3
         ^^
NameError: name 'n1' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:49:12)
-- CODE: 
# b) Espero o resultado 10.0
# c) Código executado.
# d) O resultado obtido foi 10.0, conforme o esperado.

# f) Espero o resultado 4.0
# g) Código executado.
# h) O resultado obtido foi 4.0, conforme o esperado.
# i) 
n1 = 5
n2 = 4
n3 = 3
m = (n1 + n2 + n3) / 3
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 01:40:11)
-- CODE: 
# b) Espero o resultado 10.0
n1 = 5
n2 = 4
n3 = 3
m = n1 + n2 + n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 01:47:58)
-- CODE: 
# b) Espero o resultado 10.0
# c) Código executado.
# d) O resultado obtido foi 10.0, conforme o esperado.

# f) Espero o resultado 4.0
# g) Código executado.
# h) O resultado obtido foi 4.0, conforme o esperado.
# i) 
m = (n1 + n2 + n3)/3
m = (5 + 4 + 3)/3
m = 12/3

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    m = (n1 + n2 + n3)/3
         ^^
NameError: name 'n1' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    m = (n1 + n2 + n3)/3
         ^^
NameError: name 'n1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 01:44:28)
-- CODE: 
# b) Espero o resultado 10.0
# c) Código executado.
# d) O resultado obtido foi 10.0, conforme o esperado.

# f) Espero o resultado 4.0
n1 = 5
n2 = 4
n3 = 3
m = (n1 + n2 + n3) / 3
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
